# nhs-healthcare-ds-portfolio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
01-hospital-readmission/: Makefile  README.md
01-hospital-readmission/src/readmission/: __init__.py  logging_utils.py
01-hospital-readmission/src/readmission/data/: download.py  ingest.py
01-hospital-readmission/tests/: conftest.py  test_config.py  test_download.py  test_ingest.py
data/raw/: .gitkeep
docs/: 01-hospital-readmission-prediction.md  02-nhs-waiting-list-analytics.md  03-icu-mortality-prediction.md  04-chest-xray-pneumonia-detection.md  05-clinical-nlp-system.md
src/readmission/: __init__.py  config.py  constants.py  cv.py  dashboard.py  evaluate.py  explain.py  metrics.py  monitoring.py  persist.py  preprocess.py  service.py  tracking.py  train.py
src/readmission/api/: __init__.py  app.py  dependencies.py  schemas.py
src/readmission/data/: __init__.py  download.py  ingest.py
src/readmission/features/: __init__.py  diagnoses.py  engineer.py  schema.py
src/readmission/models/: __init__.py  baseline.py  boosted.py  calibration.py
tests/: conftest.py  test_api.py  test_boosted.py  test_calibration.py  test_cv.py  test_diagnoses.py  test_download.py  test_engineer.py  test_evaluate.py  test_explain.py  test_metrics.py  test_model_comparison.py  test_monitoring.py  test_persist.py  test_preprocess.py  test_service.py  test_tracking.py  test_train.py
