[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readmission"
version = "0.1.0"
description = "Hospital 30-day readmission prediction — NHS-framed decision support (UCI Diabetes 130-US)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Umair Ali" }]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.44",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "streamlit>=1.30",
    "joblib>=1.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "httpx>=0.27",
]
# Optional experiment tracking (heavy) — not installed in CI.
tracking = ["mlflow>=2.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
readmission = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"
pythonpath = ["src"]
filterwarnings = [
    # LightGBM's sklearn wrapper warns when features arrive as a numpy array; harmless here.
    "ignore:X does not have valid feature names:UserWarning",
    # Starlette's TestClient deprecation notice about httpx; not relevant to our tests.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
# assert is idiomatic and safe in tests
"tests/**" = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
# Target the running interpreter (do not pin below 3.12 — recent numpy stubs use
# PEP 695 `type` statements that a 3.11 target rejects).
packages = ["readmission"]
mypy_path = "src"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.coverage.run]
# UI presentation and the optional MLflow integration are not exercised in CI.
omit = ["*/dashboard.py", "*/tracking.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
]
